Fix spacing bug

--- a/pages/components/TitlePage/titlepage.module.css
+++ b/pages/components/TitlePage/titlepage.module.css
@@ -3,7 +3,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: calc(100dvh - 6rem);
+  height: calc(100dvh);
   justify-content: center;
   width: calc(100dvw - 2 * 2.5dvw - 2 * 1rem);
   padding: 0 calc(2.5dvw + 1rem);
